Fix FE authchecks to valid RBAC resources
