# coderd/apidoc/swagger.json
@@ -5586,7 +5586,11 @@
         },
         "resource_type": {
           "description": "ResourceType is the name of the resource.\n`./coderd/rbac/object.go` has the list of valid resource types.",
-          "type": "string"
+          "allOf": [
+            {
+              "$ref": "#/definitions/codersdk.RBACResource"
+            }
+          ]
         }
       }
     },
@@ -6222,6 +6226,9 @@
         },
         "derp": {
           "$ref": "#/definitions/codersdk.DERP"
+        },
+        "disable_owner_workspace_exec": {
+          "type": "boolean"
         },
         "disable_password_auth": {
           "type": "boolean"
@@ -7167,6 +7174,57 @@
           "format": "date-time"
         }
       }
+    },
+    "codersdk.RBACResource": {
+      "type": "string",
+      "enum": [
+        "workspace",
+        "workspace_proxy",
+        "workspace_execution",
+        "application_connect",
+        "audit_log",
+        "template",
+        "group",
+        "file",
+        "provisioner_daemon",
+        "organization",
+        "assign_role",
+        "assign_org_role",
+        "api_key",
+        "user",
+        "user_data",
+        "organization_member",
+        "license",
+        "deployment_config",
+        "deployment_stats",
+        "replicas",
+        "debug_info",
+        "system"
+      ],
+      "x-enum-varnames": [
+        "ResourceWorkspace",
+        "ResourceWorkspaceProxy",
+        "ResourceWorkspaceExecution",
+        "ResourceWorkspaceApplicationConnect",
+        "ResourceAuditLog",
+        "ResourceTemplate",
+        "ResourceGroup",
+        "ResourceFile",
+        "ResourceProvisionerDaemon",
+        "ResourceOrganization",
+        "ResourceRoleAssignment",
+        "ResourceOrgRoleAssignment",
+        "ResourceAPIKey",
+        "ResourceUser",
+        "ResourceUserData",
+        "ResourceOrganizationMember",
+        "ResourceLicense",
+        "ResourceDeploymentValues",
+        "ResourceDeploymentStats",
+        "ResourceReplicas",
+        "ResourceDebugInfo",
+        "ResourceSystem"
+      ]
     },
     "codersdk.RateLimitConfig": {
       "type": "object",
