# site/src/api/typesGenerated.ts
@@ -117,7 +117,7 @@ export interface AuthorizationCheck {
 
 // From codersdk/authorization.go
 export interface AuthorizationObject {
-  readonly resource_type: string
+  readonly resource_type: RBACResource
   readonly owner_id?: string
   readonly organization_id?: string
   readonly resource_id?: string
@@ -1419,6 +1419,55 @@ export const ProvisionerStorageMethods: ProvisionerStorageMethod[] = ["file"]
 // From codersdk/organizations.go
 export type ProvisionerType = "echo" | "terraform"
 export const ProvisionerTypes: ProvisionerType[] = ["echo", "terraform"]
+
+// From codersdk/rbacresources.go
+export type RBACResource =
+  | "api_key"
+  | "application_connect"
+  | "assign_org_role"
+  | "assign_role"
+  | "audit_log"
+  | "debug_info"
+  | "deployment_config"
+  | "deployment_stats"
+  | "file"
+  | "group"
+  | "license"
+  | "organization"
+  | "organization_member"
+  | "provisioner_daemon"
+  | "replicas"
+  | "system"
+  | "template"
+  | "user"
+  | "user_data"
+  | "workspace"
+  | "workspace_execution"
+  | "workspace_proxy"
+export const RBACResources: RBACResource[] = [
+  "api_key",
+  "application_connect",
+  "assign_org_role",
+  "assign_role",
+  "audit_log",
+  "debug_info",
+  "deployment_config",
+  "deployment_stats",
+  "file",
+  "group",
+  "license",
+  "organization",
+  "organization_member",
+  "provisioner_daemon",
+  "replicas",
+  "system",
+  "template",
+  "user",
+  "user_data",
+  "workspace",
+  "workspace_execution",
+  "workspace_proxy",
+]
 
 // From codersdk/audit.go
 export type ResourceType =
